--- a/CountryService/pom.xml
+++ b/CountryService/pom.xml
@@ -45,6 +45,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <version>2.3.230</version>
+		 
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
