--- a/CountryService/src/main/resources/application.properties
+++ b/CountryService/src/main/resources/application.properties
@@ -1,6 +1,17 @@
-spring.application.name=CountryServics
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mydb
-spring.datasource.username=root
-spring.datasource.password=Shah9535!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+#spring.application.name=CountryServics
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mydb
+#spring.datasource.username=root
+#spring.datasource.password=Shah9535!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=none
+
+
+
+#H2 Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
